codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__workflows__tests__workflow_running_agent_detail_narrow_popup.snap
---
source: tui/src/chatwidget/workflows_tests.rs
expression: "render_view_with_size(agent_detail_params_for(WorkflowStatus::Running, 1), 52,\n32,)"
---
  finder
  running · analyzing inputs · Phase 2: Verify ·
  agent 00000000


› 1. ↗ Open transcript
  2. ↻ Retry attempt
  3. − Skip agent
     Runtime
     Usage
     Timing
     Prompt
     Result
